--- a/index.html
+++ b/index.html
@@ -5,32 +5,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">  
   
   <title>Frontend Mentor | Article preview component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
-
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
-
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
+  <main>
+    <div class="cardContainer">
+      <div class="imgPart">
+        <img src="./images/drawers.jpg" alt="drawerImg">
+      </div>
+      <div class="textPart">
+        <p class="imgDesc">
+          Shift the overall look and feel by adding these wonderful 
+          touches to furniture in your home
+        </p>
+        
+        <p class="imgPros">
+          Ever been in a room and felt like something was missing? Perhaps 
+          it felt slightly bare and uninviting. I’ve got some simple tips 
+          to help you make any room feel complete.  
+        </p>
+        
+        <div class="authorInfo">
+          <div class="authorImg">
+            <img src="./images/avatar-michelle.jpg" alt="avatar-michelle">
+          </div>
+          <div class="authorName">
+            <p class="name">Michelle Appleton</p>
+            <p class="publishDate">28 Jun 2020</p>
+          </div>
+          <div class="shareCont">
+            <div class="shareImg">
+              <img src="./images/icon-share.svg" alt="shareImg">
+            </div>
+            <div class="shareLinks hidden">
+              <p class="share">Share</p>
+              <img src="./images/icon-facebook.svg" alt="icon-facebook" class="linkLogos">
+              <img src="./images/icon-twitter.svg" alt="icon-twitter" class="linkLogos">
+              <img src="./images/icon-pinterest.svg" alt="icon-pinterest" class="linkLogos">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+  
+  
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/ChiragJain7300" target="_blank">Chirag Jain</a>.
   </div>
+
+  
 </body>
 </html>
